--- a/style.css
+++ b/style.css
@@ -294,8 +294,8 @@ body {
 .reply-container{
     display: flex;
     align-items: flex-start;
-    margin: 0px 0 20px 60px;
-    padding-bottom: 20px;
+    margin-bottom: 50px;
+    padding-bottom: 40px;
     border-bottom: 1px solid #333;
     color: #ccc;
 }
